--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@
         </div>
 
         <div class="tabs">
-          <div class="tab active" onclick="switchTab('tasks')" id="tab-tasks">Procedure</div>
+          <div class="tab active" onclick="switchTab('tasks')" id="tab-tasks">Actions</div>
           <div class="tab" onclick="switchTab('notes')" id="tab-notes">Notes</div>
         </div>
 
         <div id="tasks-content">
-          <input type="text" id="action-input" class="standard-input" style="margin-bottom: 25px; background:white; border: 1.5px solid #eee;" placeholder="Add a task...">
+          <input type="text" id="action-input" class="standard-input" style="margin-bottom: 25px; background:white; border: 1.5px solid #eee;" placeholder="+ Add Actionable Task...">
           <div id="active-actions"></div>
           <div id="archived-actions" style="margin-top: 40px; border-top: 2px dashed var(--border-color); padding-top: 20px;"></div>
         </div>
@@ -266,7 +266,7 @@
   </div>
 
 <script>
-  const DEFAULT_MD = `# Project Notes\nUse this space for deep work logs.\n\n### Quick Guide\n- **Bold** for emphasis\n- [Link](https://google.com)\n\n| Task | Status |\n| :--- | :--- |\n| Research | Done |\n| Build | Active |\n\nClick the **pencil icon** above to start writing.`;
+  const DEFAULT_MD = `# Project Notes\nUse this space for notes.\n\n### Quick Guide\n- **Bold** for emphasis\n- [Link](https://google.com)\n\n| Task | Status |\n| :--- | :--- |\n| Research | Done |\n| Build | Active |\n\nClick the **pencil icon** above to start writing.`;
 
   let projects = JSON.parse(localStorage.getItem('pf-v12')) || [];
   let pomoHistory = JSON.parse(localStorage.getItem('pf-pomo-v12')) || [];
