--- a/index.html
+++ b/index.html
@@ -198,8 +198,34 @@
         cursor: pointer; transition: 0.2s; font-size: 14px;
     }
     .btn-toggle-icon:hover { background: var(--accent-brown); transform: scale(1.1); }
+    
     .notes-area { width: 100%; height: 450px; border: none; background: transparent; font-family: inherit; font-size: 15px; line-height: 1.8; resize: none; color: #4a372d; }
-    .markdown-body { width: 100%; height: 450px; overflow-y: auto; font-size: 15px; line-height: 1.8; color: #4a372d; }
+    
+    /* --- MARKDOWN STYLING (Including Tables) --- */
+    .markdown-body { 
+        width: 100%; height: 450px; overflow-y: auto; 
+        font-size: 15px; line-height: 1.8; color: #4a372d; 
+    }
+    .markdown-body table { 
+        border-collapse: collapse; 
+        width: 100%; 
+        margin-bottom: 1rem; 
+        background-color: transparent; 
+        border: 1px solid var(--border-color);
+    }
+    .markdown-body th, .markdown-body td { 
+        border: 1px solid var(--border-color); 
+        padding: 12px; 
+        text-align: left; 
+    }
+    .markdown-body th { 
+        background-color: rgba(215, 204, 200, 0.2); 
+        font-weight: 700; 
+        color: var(--accent-brown); 
+    }
+    .markdown-body tr:nth-child(even) { 
+        background-color: rgba(215, 204, 200, 0.05); 
+    }
 
     /* --- MODALS --- */
     .modal-overlay {
@@ -337,7 +363,6 @@
             <button class="btn-action" onclick="closeGuide()" style="padding: 15px 40px; font-size: 16px;">I'm Ready to Flow</button>
         </div>
     </div>
-</div>
 </div>
 
   <div class="app-container" id="app-shell">
