--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@
         display: flex;
         justify-content: flex-end;
         margin-bottom: 15px;
+        margin-top: 5px;
       }
       .btn-toggle-icon {
         background: var(--muted-tan);
