--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,7 @@
         if (isPomoRunning) {
           clearInterval(pomoTimer);
           isPomoRunning = false;
-          updateTimerDisplay(); // Refresh title to "Paused"
+          document.title = "Project Flow";
         } else {
           isPomoRunning = true;
           pomoTimer = setInterval(() => {
@@ -1145,18 +1145,13 @@
               pomoHistory.push(Date.now());
               save();
               playAlertSound();
-
-              // --- UPDATED FINISHED STATE ---
-              document.title = "✅ Session Complete!";
               alert("Focus session complete!");
-
               pomoSecs = defaultMins * 60;
-              updateTimerDisplay(); // Resets title to default after alert
-            } else {
-              updateTimerDisplay();
             }
+            updateTimerDisplay();
           }, 1000);
         }
+        updateTimerDisplay();
       }
 
       function updateTimerDisplay() {
@@ -1166,30 +1161,15 @@
           2,
           "0"
         )}`;
-
         const timerDisplay = document.getElementById("timer-display");
         if (timerDisplay) timerDisplay.innerText = timeStr;
-
         const timerBox = document.getElementById("timer-display-box");
         if (timerBox) timerBox.classList.toggle("active", isPomoRunning);
-
-        // --- UPDATED TITLE LOGIC ---
-        const activeProject = projects.find((x) => x.id === activeId);
-        const projectName = activeProject
-          ? activeProject.name
-          : "Active Session";
-
         if (isPomoRunning) {
-          // Shows a "Recording" dot and project name without the ticking numbers
-          document.title = `🔴 ${projectName} | In Progress`;
+          const p = projects.find((x) => x.id === activeId);
+          document.title = `(${timeStr}) ${p ? p.name : "Active"}`;
         } else {
-          // If the timer is exactly at the start/reset point, show default
-          if (pomoSecs === defaultMins * 60) {
-            document.title = "Project Flow";
-          } else {
-            // This shows when you PAUSE the timer
-            document.title = `⏸ Paused: ${projectName}`;
-          }
+          document.title = "Project Flow";
         }
       }
 
